--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -1,5 +1,6 @@
 .Search {
   margin-top:50%;
+  width: 90%;
   form{
     width: 92%;
    // background-color: black;
@@ -13,4 +14,7 @@
   #search-bar{
     margin-bottom:20%;
   }
+}
+.container-searchPage{
+  width: 100%;
 }
