--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -57,24 +57,32 @@ input {
   height: 3rem;
   border: none;
   padding: 5% 11% 2% 5%;
-  border-bottom: lightgray solid 1px;
+  border-bottom: lightgray solid 3px;
   width: 85%; 
   border-radius: 10px;
   //padding-bottom: 10%;
   text-align: center;
+  box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.1607843137254902);
 }
 
 
 
-
+.text-to-signup{
+  color: #2da6bb;
+}
 
 .btn-login {
   border-radius: 0.25rem;
-  padding: 5% 41% 5% 43%
+  padding: 5% 41% 5% 43%;
+  border:none;
+}
+.btn-login p {
+  color:black;
+  font-size: 1.3rem;
 }
 
 .container-logo{
-  padding: 10% 27%;
+  padding: 14% 27%;
 }
 .container-input-login{
   padding-bottom: 5%;
