--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,7 +1,12 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 .container{
   background-color:lightgray;
-  height: 100%; 
+  //height: 100%; 
 }
 *{
-  font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', 'Arial', sans-serif;
+}
+html, body{
+  height: 100%;
+  width: 100%;
 }
