--- a/src/stylesheets/Cards.scss
+++ b/src/stylesheets/Cards.scss
@@ -8,9 +8,10 @@
 }
 
 .container-private{
-  padding:12% 0% 0% 0%;
+  padding:6% 0% 0% 0%;
   h2{
     text-align: center;
+    font-size: 30px;
   }
 
 }
@@ -22,12 +23,12 @@
 }
 .container-food{
   margin:0 0 ;
-  //width: 0%;
-  padding:6% 0% 0 0%; 
+  width: 100%;
+  padding:6% 0% 1% 0%; 
   font-size: 20px;
   p{
     text-align: center;
-    padding: 0 5% 2% 0;
+    padding: 0 3% 2% 1%;
   }
 }
 .recipe-title{
@@ -36,49 +37,59 @@
 }
 .container-health-label{
   display:flex;
-  //justify-content: space-between; 
-  padding: 1% 0% 5% 0%;
-  //flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: space-around; 
+  padding: 1% 0% 5% 6%;
+  width: 85%
+;  //flex-wrap: wrap;
   //width: 80%;
   span{
     //padding:1%;
-    background-color: #2da6bb;
-    color:white;
+   // background-color: #2da6bb;
+    color:#2da6bb;
   }
   
   p{
     padding: 0 0% 0 1%;
   }
 }
-.container-image img{
+.container-image {
+img{
   width: 100%;
   box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
-  margin-bottom:5%;
-
+  margin-bottom:3%;
+}
 }
 span {
   color: #2da6bb;
 }
 .container-icon-card{
   display: flex;
-  padding: 3% 0% 2% 6%;
-  width: 90%
+  padding: 1% 0% 0% 1%;
+  //width: 98%;
+  span {
+    font-size: 25px;
+
+  }
 ;}
-.container-btn-view-and-fav{
+/* .container-btn-view-and-fav{
   padding: 0 0 0 17%;
   display: flex;
   justify-content: baseline;
-}
+} */
 .btn-view-recipe{
-  padding: 14.5px;
-  border:none;
-  border-radius: 7px;
-  background-color: #2da6bb;
-  color: white;
+  padding: 13% 11% 13% 15%;
+  //border:none;
+  //border-radius: 7px;
+  //background-color: #2da6bb;
+  //color: white;
   text-decoration: none;
  // list-style: none;
   //width: 50%;
   //padding-left: 50%;
+  span{
+  font-size: 18px;
+  }
   p{
     width: 60%;
   }
@@ -86,154 +97,47 @@ span {
     color: black;
   }
 }
-.container-btn{
- // padding-left: 10%;
- padding-right: 24%;
-}
-.container-fav{
-  padding-left: 2%;
+
+.container-btn-view-and-fav{
+  display: flex;
+  justify-content: space-around;
+
 }
 .btn-fav{
-  padding: 15px;
-  border:none;
-  border-radius: 7px;
-  background-color: #2da6bb;
-  color: white;
-  border: none;
- // position: absolute;
-  //top: 12%;
-  //left: 84%;
+  padding: 11% 12% 11% 12%;
+  //border:none;
+  //border-radius: 7px;
+  //border: none;
+  span{
+    font-size: 18px;
+  }
   img{
     width: 40%;
-    //box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
   }
 }
+.container-favorite{
+  padding-top:5%;
+  h2{
+    text-align: center;
+  }
+}
+.btn-recipe{
+  padding: 2% 10% 2% 10%;
+}
 
-/* .Cards{
-  width: 460px;
-  height: 654px;
-  background: var(--white);
+.container-btn-recipe{
+  padding: 0% 0% 0% 30%;
+  span{
+    font-size: 25px;
+  }
+}
+.container-view-fav{
   display: flex;
-  flex-direction: column;
-  box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
-  overflow: hidden;
-  @include poCentering;
-  .ft-recipe__thumb {
-      position: relative;
-      height: 281px;
-      box-shadow: 0px 0px 130px 0 rgba(0, 0, 0, 0.38);
-      #close-modal {
-          position: absolute;
-          top: 0; right: 0;
-          width: 36px;
-          height: 36px;
-          background: #000;
-          color: var(--white);
-          text-align: center;
-          line-height: 36px;
-          font-size: 22px;
-          cursor: pointer;
-          z-index: 1;
-          transition: all 200ms ease;
-          &:hover {
-              background: transparent;
-              color: var(--black);
-          }
-      }
-      h3 {
-          text-align: center;
-          position: absolute;
-          margin: 0;
-          width: 100%;
-          color: var(--white);
-          font-family: var(--headlinesFont);
-          font-size: 25px;
-          height: 100%;
-          background: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), transparent);
-          padding: 2.4rem 0 0;
-      }
-      img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          object-position: 50% 50%;
-      }
-  }
-  .ft-recipe__content {
-      flex: 1;
-      padding: 0 2em 1em;
-      .content__header {
-          .row-wrapper {
-              display: flex;
-              padding: .55em 0 .3em;
-              border-bottom: 1px solid #d8d8d8;
-              .recipe-title {
-                  font-family: var(--headlinesFont);
-                  font-weight: 600;
-              }
-              .user-rating {
-
-              }
-          }
-          .recipe-details {
-              display: flex;
-              list-style: none;
-              padding: 1.4em 0 1em;
-              margin: 0;
-              justify-content: space-between;
-              .recipe-details-item {
-                  flex: 1;
-                  i {
-                      font-size: 30px;
-                  }
-                  .value {
-                      color: #ff4f87;
-                      margin-left: .35em;
-                      vertical-align: bottom;
-                      font: {
-                          size: 24px;
-                          weight: 600;
-                      }
-                  }
-                  .title {
-                      display: block;
-                      margin-top: -4px;
-                      font: {
-                          family: var(--headlinesFont);
-                          size: 21px;
-                          weight: 300;
-                      }
-                  }
-              }
-          }
-
-      }
-      .description {
-          margin: .3em 0 1.8em;
-      }
-      .content__footer {
-          text-align: center;
-          margin: 0 3rem;
-          a {
-              display: inline-block;
-              background: var(--wildWatermelon);
-              padding: .45em 1em;
-              width: 100%;
-              text-align: center;
-              border-radius: 5px;
-              color: #fff;
-              font-weight: 500;
-              letter-spacing: .2px;
-              font-size: 17px;
-              transition: transform 250ms ease,
-                          box-shadow 250ms ease;
-              &:hover {
-                  transform: translateY(-3px);
-                  box-shadow: 0 10px 34px 0 rgba(255, 79, 135, 0.32);
-              }
-          }
-      }
-  }
-
+  justify-content: space-around;
 }
- */
+.btn-fav-list{
+  padding: 11% 11% 11% 15%; 
+  span{
+    font-size: 18px;
+  }
+}
