--- a/src/stylesheets/Navbar.scss
+++ b/src/stylesheets/Navbar.scss
@@ -1,10 +1,13 @@
-.Navigation {
-  background-color:#fafafa;
+.navigation {
+  //background-color:#fafafa;
+  background-color: #efecec;
   overflow: hidden;
   position: fixed;
-  top: 0;
+  //top: 0%;
+  bottom:0%;
   width: 100%;
-  height: 10%;
+  height: 9%;
+  z-index: 1000;
   //border-bottom: #288ada solid 2px;
   //box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
 
@@ -12,7 +15,7 @@
   ul {
     list-style: none;
     margin: 0;
-    padding: 0 10% 10% 5%;
+    padding: 0 5% 4% 5%;
 
     display: flex;
     justify-content: center;
