--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -1,20 +1,135 @@
-.Search {
-  margin-top:50%;
-  width: 90%;
+.search {
+  //margin-top:12%;
+  max-width: 100%;
+  padding: 1% 0 0% 0;
+  label{
+    text-align: center;
+  }
   form{
     width: 92%;
    // background-color: black;
   }
-  div {
-    margin-top: 50%;
-  }
   h2 {
     text-align: center;
+    padding: 3% 0% 2% 0%;
+  }
+  h3{
+    font-weight: lighter;
   }
   #search-bar{
-    margin-bottom:20%;
+   // margin-bottom:20%;
+    max-width: 100%;
   }
 }
+
 .container-searchPage{
-  width: 100%;
+  max-width: 100%;
+  padding-bottom: 10%;
+}
+.ui-form{
+  display:flex;
+  padding-top:2%;
+}
+/* .container-input{
+  display: flex;
+} */
+.btn-search{
+  padding:2% 20% 2% 20%;
+}
+.container-time{
+  display: flex;
+  padding-bottom: 10%;
+  input {
+    padding-right:10px; 
+  }
+}
+.container-calories{
+  display: flex;
+  padding-left: 4%;
+  input{
+    height: 10%;
+    width: 16%;
+    margin-right: 9%;
+  }
+  label{
+    padding-right: 2%;
+  }
+}
+.container-health{
+  display: flex;
+  justify-content: center;
+  //padding-bottom:0 5% 10%;
+  // ul {
+  // list-style: none;
+  // margin: 0 0 20px;
+  // padding: 0;
+  // display: flex;
+  // li{
+  //   padding-right: 10%;
+  // }
+  label {
+    display: block;
+    color: #7d7d7d;
+  }
+  
+  .floatBlock {
+    margin: 0 1.81em 0 0;
+  }
+  
+  .labelish {
+    color:#7d7d7d;
+    margin: 0;
+  }
+  
+  .healthOptions {
+    border: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    break-before: always;
+    margin: 0 0 1% 0;
+  }
+  .timeOptions{
+      border: none;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      break-before: always;
+      margin: 0 0 3em 0;
+  }
+  
+  #purchaseOrder {
+    margin: 0 0 2em 0;
+  }
+}
+
+.centerInput{
+  padding-right: 10%;
+  border:none;
+}
+.container-input-search{
+  //padding-left: 20%;
+  input{
+    background-color: #c8cbce63;
+    //height: 10%;
+  }
+  label{
+    font-size: 20px;
+    text-align: center;
+  }
+}
+.container-child-searchbar{
+  input {
+    height: 10%;
+  }
+}
+.container-btn-search{
+  padding:4% 0 0 23%;
+  span{
+    font-size: 25px;
+    text-align: center;
+  }
+}
+input[type="radio"]{
+  height: 2rem;
 }
