--- a/src/stylesheets/Storage.scss
+++ b/src/stylesheets/Storage.scss
@@ -1,6 +1,9 @@
 .container-storage{
  // padding:23% 6% 0 2%;
- padding:20% 0% 0 5%;
+ padding:10% 0% 0 5%;
+ h2{
+   text-align: center;
+ }
 }
 .container-food-storage{
   padding:10 0%;
