--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -24,14 +24,14 @@
    padding: 5% 0% 0%  0%;
  }
  .btn-counter-plus{
-   padding:15% 60% 15% 60%;
+   padding:15px 30px 15px 30px;
    span{
      font-size: 25px;
    }
  }
 
  .btn-counter-minus{
-  padding:15% 60% 15% 60%;
+  padding:15px 30px 15px 30px;
   span{
     font-size: 25px;
     text-align: center;
@@ -42,4 +42,9 @@
  }
  .container-btn-counter{
    padding-right: 30%;
+ }
+ li span{
+   font-size:18px;
+   color: black;
+   padding-right: 5%;
  }
