--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 .container{
   background-color:lightgray;
   //height: 100%; 
@@ -8,5 +8,5 @@
 }
 html, body{
   height: 100%;
-  width: 100%;
+  width: 100%; 
 }
