--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -6,7 +6,7 @@
   padding: 0 0 100%;
   overflow: hidden;
 }
-form{
+.form-login{
   //margin:35% auto;
   width: 90%;
   //display: flex;
@@ -18,7 +18,7 @@ form{
 }
 input {  
   font-size: 1.3rem;
-  height: 3rem;
+  height: 2rem;
   border: none;
   padding: 5% 11% 2% 5%;
   border-bottom: lightgray solid 3px;
@@ -28,6 +28,11 @@ input {
   text-align: center;
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.1607843137254902);
   background-color: #c8cbce63;
+ 
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color:#404040;
+  opacity: 0.5; /* Firefox */
 }
 
 .login{
@@ -41,8 +46,9 @@ input {
 
 .btn-login {
   border-radius: 0.25rem;
-  padding: 5% 41% 5% 41%;
-  border:none;
+  padding: 1rem 6.5rem 1rem 6.5rem;
+  border:solid 3px #2da6bb;
+  background-color: transparent;
 }
 .btn-login p {
   color:#2da6bb;
