--- a/src/stylesheets/Signup.scss
+++ b/src/stylesheets/Signup.scss
@@ -28,7 +28,8 @@
 .ui-form-signup {
 
     display:flex;
-    padding-top:2%;
+    padding: 1rem 1rem 0.5rem 2.2rem;
+    margin-left: 4%;
   
 }
 .ui-form-signup input {  
@@ -37,7 +38,7 @@
   border: none;
   padding: 5% 11% 2% 5%;
   border-bottom: lightgray solid 1px;
-  width: 85%; 
+  width: 77%; 
   border-radius: 10px;
   //padding-bottom: 10%;
   text-align: center;
@@ -47,29 +48,32 @@
   padding-bottom: 5%;
   //display: flex;
 }
-.container-logo-sign{
-  padding: 8% 27%;
+.container-logo-signup{
+  padding: 12% 0% 7% 24%;
 }
 .text-signup{
   text-align: center;
-  padding-top:5%; 
+  /* padding-top:5%;  */
   a{
     text-decoration: none;
   }
 }
 
-  .container-btn-signup{
-    padding:4% 0 0 5%;
+ .container-btn-signup{
+   padding: 0.5rem 1rem 1rem 0.9rem;
+    /* padding:4% 0 0 5%;
     span{
       font-size: 25px;
       text-align: center;
-    }
-  }
+    } */
+    //padding:10%;
+  } 
 
   .btn-signup {
     border-radius: 0.25rem;
-    padding: 12px 129px 12px 119px;
-    border:none;
+    padding: 1rem 6.5rem 1rem 6.5rem;
+    border:solid 3px #2da6bb;
+    background-color: transparent;
   }
   .btn-signup p {
     color:#2da6bb;
