add toast messages, styles, clean code

--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -2,9 +2,9 @@
 .container-login{
   max-width: 100%;
   background-color:#fafafa; 
-  height: 100%;
   padding: 0 0 100%;
   overflow: hidden;
+  margin-bottom: -70%;
 }
 .form-login{
   //margin:35% auto;
