--- a/src/stylesheets/Cards.scss
+++ b/src/stylesheets/Cards.scss
@@ -30,6 +30,7 @@
     text-align: center;
     padding: 0 3% 2% 2%;
   }
+  
 }
 .recipe-title{
   font-size: 22px;
@@ -56,8 +57,9 @@
 .container-image {
 img{
   width: 100%;
-  box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
+  box-shadow: 0px 46px 94px 0  rgba(0, 0, 0, 0.1607843137254902);
   margin-bottom:3%;
+  //0 0 88px 0
 }
 hr{
   width: 50%;
@@ -189,4 +191,19 @@ span {
   padding-left: 10%;
   background-color: transparent;
   border:none;
+}
+
+.container-notify-fav-dashboard{
+  height: 10%;
+  background-color: lightgrey;
+  color: #2da6bb;
+  position:fixed;
+  width: 100%;
+  opacity: 0.9;
+  h3{
+    font-size: 1.2rem;
+    padding-left: 2%;
+    font-weight: lighter;
+    padding: 5% 0% 0% 5%;
+  }
 }
