--- a/src/stylesheets/Navbar.scss
+++ b/src/stylesheets/Navbar.scss
@@ -1,16 +1,12 @@
 .navigation {
-  //background-color:#fafafa;
   background-color: #efecec;
   overflow: hidden;
   position: fixed;
-  //top: 0%;
   bottom:0%;
   width: 100%;
   height: 9%;
   z-index: 1000;
-  //border-bottom: #288ada solid 2px;
-  //box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
-
+  border-top: solid #F28705 1px;
   
   ul {
     list-style: none;
@@ -21,10 +17,6 @@
     justify-content: center;
     
   }
-
- /*  li {
-    margin: 10px 20px;
-  } */
 
   a {
     text-decoration: none;
@@ -67,13 +59,5 @@
     display: flex;
     justify-content: center;
   }
- /*  .container-login{
-    border-radius: 5px;
-    box-shadow: 0 1.5px 0 0;
-    displa
-
-  } */
-  
-
 
 }
