--- a/src/stylesheets/Cards.scss
+++ b/src/stylesheets/Cards.scss
@@ -1,6 +1,3 @@
-.spinner{
-  padding: 10% 0% 0% 0%;
-}
 
 .spinner{
   padding-top:50%;
@@ -8,10 +5,11 @@
 }
 
 .container-private{
-  padding:6% 0% 0% 0%;
+  padding:19px 0px 0px 0px;
   h2{
     text-align: center;
     font-size: 25px;
+    font-weight: lighter;
   }
 
 }
@@ -28,7 +26,7 @@
   font-size: 20px;
   p{
     text-align: center;
-    padding: 0 3% 2% 2%;
+    padding: 0 0.8rem 0.3rem 0.3rem;
   }
   
 }
@@ -40,13 +38,9 @@
   display:flex;
   flex-wrap: wrap;
   justify-content: space-around; 
-  padding: 1% 0% 5% 6%;
-  width: 85%
-;  //flex-wrap: wrap;
-  //width: 80%;
+  padding: 0.5rem 1rem 0.9rem 2.1rem;
+  width: 85%;
   span{
-    //padding:1%;
-   // background-color: #2da6bb;
     color:#2da6bb;
   }
   
@@ -58,7 +52,7 @@
 img{
   width: 100%;
   box-shadow: 0px 46px 94px 0  rgba(0, 0, 0, 0.1607843137254902);
-  margin-bottom:3%;
+  margin-bottom:1rem;
   //0 0 88px 0
 }
 hr{
@@ -125,10 +119,11 @@ span {
   }
 }
 .container-favorite{
-  padding-top:5%;
-  padding-bottom: 20%;
+  padding-top:18px;
+  padding-bottom: 89px;
   h2{
     text-align: center;
+    font-weight: lighter;
   }
 }
 .btn-recipe{
