--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -13,16 +13,16 @@
   align-content: center;
   border-radius: 10px;
   justify-content: center;
-  margin-left:5%;
-  padding-top:3%;
+  margin-left:26px;
+  padding-top:1rem;
 }
 input {  
   font-size: 1.3rem;
   height: 2rem;
   border: none;
-  padding: 5% 11% 2% 5%;
+  padding: 1rem 0.8rem 1rem 0.8rem;
   border-bottom: lightgray solid 3px;
-  width: 85%; 
+  //width: 85%; 
   border-radius: 10px;
   //padding-bottom: 10%;
   text-align: center;
@@ -46,7 +46,7 @@ input {
 
 .btn-login {
   border-radius: 0.25rem;
-  padding: 1rem 6.5rem 1rem 6.5rem;
+  padding: 1rem 7rem 1rem 7rem;
   border:solid 3px #2da6bb;
   background-color: transparent;
 }
@@ -76,4 +76,7 @@ li{
 }
 .container-main-input{
   background-color:none;
+}
+.container-btn-login{
+  padding: 0px 0px 0px 4px;
 }
