--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -1,6 +1,6 @@
 .search {
   max-width: 100%;
-  padding: 1% 0 0% 0;
+  padding: 5px 0 4px 0;
   label{
     text-align: center;
   }
@@ -9,8 +9,9 @@
   }
   h2 {
     text-align: center;
-    padding: 3% 0% 2% 0%;
+    padding: 22px 0 4px 0;
     font-size: 25px;
+    font-weight: lighter;
   }
   h3{
     font-weight: lighter;
@@ -40,6 +41,7 @@
   padding-bottom: 10%;
   input {
     padding-right:10px; 
+    width: 80%;
   }
 }
 
@@ -58,6 +60,7 @@
     border: grey solid 3px;
     padding: 4% 2% 1% 0%;
     font-size: 1.1rem;
+    width: 80%;
   }
   label{
     padding-right: 2%;
@@ -99,10 +102,7 @@
       break-before: always;
       margin: 0 0 3em 0;
   }
-  
-  #purchaseOrder {
-    margin: 0 0 2em 0;
-  }
+ 
 }
 
 .centerInput{
@@ -135,7 +135,7 @@
   }
 }
 .container-btn-search{
-  padding:4% 0 0 32%;
+  padding:0% 0 0 32%;
   p{
     font-size: 25px;
     text-align: center;
