--- a/src/stylesheets/Login.scss
+++ b/src/stylesheets/Login.scss
@@ -58,7 +58,7 @@ input {
 }
 
 .container-logo{
-  padding: 14% 27%;
+  padding: 1rem 2rem 1rem 6rem;
 }
 .container-input-login{
   padding-bottom: 5%;
