--- a/src/stylesheets/RecipeDetails.scss
+++ b/src/stylesheets/RecipeDetails.scss
@@ -4,11 +4,15 @@
   width: 100%;
   h2{
     text-align: center;
-    padding-bottom: 5%;
-    padding-left: 9%;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+    font-weight: lighter;
+    font-size: 23px;
   }
   h3{
     text-align: center;
+    font-weight: lighter;
+    padding: 0.5rem 0 0.5rem 0;
   }
 }
 .container-ingredients{
@@ -16,26 +20,19 @@
 }
 .container-image-details  img{
   width: 100%;
- // box-shadow: 0 0 88px 0 rgba(0, 0, 0, 0.1607843137254902);
   margin-bottom:5%;
-//  padding: 5% 0% 0% 0%;
-
 
 }
 
 .container-health-label-details{
   display:flex;
   justify-content: space-around; 
-  padding: 2% 1% 5% 1%;
+  padding: 0rem 0.5rem 1rem 1.2rem;
   flex-wrap: wrap;
-  //width: 80%;
   span{
-    //padding:1%;
-   // background-color: #2da6bb;
-    //color:white;
     font-size: 20px;
   }
-  
+
   p{
     padding: 0 0% 0 1%;
     color: #2da6bb;
@@ -44,8 +41,7 @@
 
 .container-icon-card-details{
   display: flex;
-  padding: 5% 0% 2% 6%;
-  width: 90%;
+  padding: 0rem 0.5rem 1rem 1.2rem;
   justify-content: space-around;
   span{
     font-size: 25px;
@@ -53,12 +49,12 @@
 
 }
 .container-btn-fav-details{
-  padding: 0% 0% 0% 10%;
+  padding: 0 0 0 1rem;
   position: absolute;
-  top:64%;
+  top:62%;
   left: 70%;
   img{
-    width: 70%;
+    width: 60%;
   }
 }
 .btn-fav-details{
