--- a/src/stylesheets/Search.scss
+++ b/src/stylesheets/Search.scss
@@ -109,7 +109,7 @@
   border:none;
   background-color: #c8cbce63;
   border-bottom: lightgray solid 3px;
-  //width: 85%;
+  width: 85%;
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.160784);
