fixed route storage

--- a/src/stylesheets/Item.scss
+++ b/src/stylesheets/Item.scss
@@ -48,12 +48,12 @@
    display: flex;
  }
  .container-btn-counter-plus{
-   padding-right: 15%;
+   padding-right: 1rem;
  }
  li span{
    font-size:18px;
    color: black;
-   padding-right: 5%;
+   padding-right: 10px;
  }
  .main-container-foodbox{
    display: block;
