--- a/src/stylesheets/Storage.scss
+++ b/src/stylesheets/Storage.scss
@@ -247,9 +247,10 @@ ul {
 }
 
 .container-item{
-  padding: 3% 0% 0% 6%;
+  padding: 0.8rem 0rem 0rem 1rem;
+  //padding: 3% 0% 0% 6%;
   ul{
-    padding-left: 10%;
+    padding-left: 1rem;
   }
    li{
     //width: 100%;
